--- a/src/components/Search/styles.module.css
+++ b/src/components/Search/styles.module.css
@@ -1,13 +1,21 @@
 .search {
   display: flex;
   width: 100%;
+  background-color: white;
   gap: 12px;
-  background-color: #fff;
+}
+
+.light {
+  background-color: white;
+}
+
+.dark {
+  background-color: #23272f;
 }
 
 .input {
   width: 100%;
   padding: 10px;
-  border: 1px solid #f2f4f5;
+  border: 1px solid #f2f3f5;
   border-radius: 12px;
 }
